--- a/openApiDocs/beta/Applications.yml
+++ b/openApiDocs/beta/Applications.yml
@@ -12072,11 +12072,11 @@ paths:
     put:
       tags:
         - servicePrincipals.customClaimsPolicy
-      summary: Update customClaimsPolicy
-      description: Update a customClaimsPolicy object.
+      summary: Create or replace claimsPolicy
+      description: 'Create a new customClaimsPolicy object if it doesn''t exist, or replace an existing one.'
       externalDocs:
         description: Find more info here
-        url: https://learn.microsoft.com/graph/api/customclaimspolicy-update?view=graph-rest-beta
+        url: https://learn.microsoft.com/graph/api/serviceprincipal-put-claimspolicy?view=graph-rest-beta
       operationId: servicePrincipal_SetClaimsPolicy
       parameters:
         - name: servicePrincipal-id
@@ -12107,11 +12107,11 @@ paths:
     patch:
       tags:
         - servicePrincipals.customClaimsPolicy
-      summary: Update customClaimsPolicy
-      description: Update a customClaimsPolicy object.
+      summary: Create or replace claimsPolicy
+      description: 'Create a new customClaimsPolicy object if it doesn''t exist, or replace an existing one.'
       externalDocs:
         description: Find more info here
-        url: https://learn.microsoft.com/graph/api/customclaimspolicy-update?view=graph-rest-beta
+        url: https://learn.microsoft.com/graph/api/serviceprincipal-put-claimspolicy?view=graph-rest-beta
       operationId: servicePrincipal_UpdateClaimsPolicy
       parameters:
         - name: servicePrincipal-id
@@ -27321,7 +27321,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.appLogCollectionRequest'
-              description: The collection property of AppLogUploadRequest.
+              description: Indicates collection of App Log Upload Request.
               x-ms-navigationProperty: true
           additionalProperties:
             type: object
@@ -29491,11 +29491,11 @@ components:
       properties:
         key:
           type: string
-          description: Contains the name of the field that a value is associated with.
+          description: Key.
           nullable: true
         value:
           type: string
-          description: Contains the corresponding value for the specified key.
+          description: Value.
           nullable: true
       additionalProperties:
         type: object
