--- a/openApiDocs/v1.0/Sites.yml
+++ b/openApiDocs/v1.0/Sites.yml
@@ -61754,11 +61754,11 @@ paths:
     get:
       tags:
         - sites.site
-      summary: Search for sites
-      description: Search across a SharePoint tenant for sites that match keywords provided. The only property that works for sorting is createdDateTime. The search filter is a free text search that uses multiple properties when retrieving the search results.
+      summary: List sites
+      description: "List all available sites in an organization. Specific filter criteria and query options are also supported and described below: In addition, you can use a $search query against the /sites collection to find sites matching given keywords.\nIf you want to list all sites across all geographies, refer to getAllSites. For more guidance about building applications that use site discovery for scanning purposes, see Best practices for discovering files and detecting changes at scale."
       externalDocs:
         description: Find more info here
-        url: https://learn.microsoft.com/graph/api/site-search?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/site-list?view=graph-rest-1.0
       operationId: site_ListSite
       parameters:
         - $ref: '#/components/parameters/top'
